# rapidocr-openvino

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: main.yml
rapidocr_openvino/: __init__.py  config.yaml  main.py
rapidocr_openvino/ch_ppocr_v2_cls/: __init__.py  config.yaml
rapidocr_openvino/ch_ppocr_v3_det/: __init__.py  text_detect.py  utils.py
rapidocr_openvino/ch_ppocr_v3_rec/: __init__.py  config.yaml  text_recognize.py
rapidocr_openvino/utils/: __init__.py
tests/: test_vino.py
