[tool.poetry]
name = "rapidocr-openvino"
version = "0.1.0"
description = ""
authors = ["Lalit Kumar <lalitk0611@gmail.com>"]
readme = "README.md"
packages = [{ include = "rapidocr_openvino" }]
include = ["rapidocr_openvino/models/*.onnx"]

[tool.poetry.dependencies]
python = "^3.10"
pyclipper = "^1.3.0.post5"
openvino = "^2024.2.0"
opencv-python-headless = "^4.10.0.84"
numpy = "<2.0.0"
six = "^1.16.0"
shapely = "^2.0.4"
pyyaml = "^6.0.1"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
