[tool.poetry]
name = "rapidocr-openvino"
version = "0.1.0"
description = ""
authors = ["Lalit Kumar <lalitk0611@gmail.com>"]
readme = "README.md"
packages = [{ include = "rapidocr_openvino" }]
include = ["rapidocr_openvino/models/*.onnx"]

[tool.poetry.dependencies]
python = "^3.10"
pyclipper = "^1.3.0.post6"
openvino = "^2025.1.0"
opencv-python-headless = "^4.11.0.86"
numpy = "^2.1.1"
six = "^1.17.0"
shapely = "^2.1.0"
pyyaml = "^6.0.2"
pillow = "^11.2.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
